# privacy-kit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  cli.out  docker-compose.yml  privacy_kit.sqlite-shm  privacy_kit.sqlite-wal  pyproject.toml
.github/workflows/: ci.yml
docs/: dev-plan.md  development-research.md
examples/: README.md  langchain_langgraph_langfuse.py  langfuse_mask.py  langsmith_anonymizer.py  pii_model_demo.py
scripts/: README.md  check_imports.py  codex_probe.py  publish.sh  sync_secret_rules.py
src/privacy_kit/: __init__.py  __main__.py  cli.py  model.py
src/privacy_kit/core/: __init__.py  detectors.py  detectors_regex.py  detectors_secret.py  redactor.py  secret_rules.py  types.py  vault.py
src/privacy_kit/gateway/: __init__.py  cli.py  clients.py  config.py  language.py  policy.py  route.py  ui.py  webapi.py
src/privacy_kit/gateway/importer/: __init__.py  base.py  claude_code.py  codex.py  runner.py
src/privacy_kit/gateway/otel/: __init__.py  sink.py
src/privacy_kit/gateway/proxy/: __init__.py  app.py  classify.py  streaming.py  transform.py
src/privacy_kit/gateway/store/: __init__.py  audit.py  models.py
src/privacy_kit/integrations/: langchain.py  langfuse.py  langsmith.py
tests/: conftest.py  test_chatgpt_codex.py  test_classify.py  test_cli.py  test_clients.py  test_codex_route.py  test_conversations.py  test_cursor_hooks_route.py  test_detect_model.py  test_detectors.py  test_gateway_e2e.py  test_gateway_secrets.py  test_gateway_smoke.py  test_importer.py  test_langchain_integration.py  test_langfuse_integration.py  test_langsmith_integration.py  test_log_safety.py  test_model_download.py  test_otel.py  test_packaging.py  test_policy.py  test_postprocess.py  test_proxy.py  test_redactor.py  test_route.py  test_secret_detectors.py  test_smoke.py  test_store.py  test_streaming.py  test_ui.py  test_vault.py  test_webapi.py  test_wire_fidelity.py
tests/fixtures/: pii_samples.json
tests/importer/: importer_helpers.py  test_api.py  test_parsers.py  test_runner.py
web/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/pk/[...path]/: route.ts
web/app/conversations/: page.tsx
web/app/conversations/[id]/: page.tsx
web/app/conversations/[id]/interactions/[interactionId]/: page.tsx
web/app/interactions/: page.tsx
web/app/interactions/[id]/: page.tsx
web/app/preview/: page.tsx
web/app/settings/: page.tsx
web/app/texts/: page.tsx
web/components/: app-shell.tsx  button.tsx  category-badge.tsx  charts.tsx  clear-log.tsx  config-controls.tsx  conversation-thread.tsx  conversations-live.tsx  delete-interaction.tsx  entity-chips.tsx  import-history.tsx  interaction-detail-body.tsx  interaction-detail-view.tsx  interactions-controls.tsx  interactions-live.tsx  overview-live.tsx  policy-badge.tsx  preview-tool.tsx  query-provider.tsx  stat-card.tsx  text-highlight.tsx  texts-live.tsx  theme-toggle.tsx  ui.tsx
web/lib/: api.ts  client-api.ts  colors.ts  format.ts  kind.ts  pii.ts  types.ts
