[project]
name = "privacy-kit"
version = "0.1.0"
description = "PII detection and anonymization using bardsai/eu-pii-anonimization-multilang model"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Bards.ai" },
]
keywords = ["pii", "anonymization", "privacy", "ner", "gdpr", "huggingface"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
]

[project.urls]
Homepage = "https://github.com/bards-ai/privacy-kit"
Repository = "https://github.com/bards-ai/privacy-kit"
Issues = "https://github.com/bards-ai/privacy-kit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/privacy_kit"]
