[project]
name = "privacy-kit"
version = "0.2.0"
description = "PII detection and anonymization using bardsai/eu-pii-anonimization-multilang model"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Bards.ai" },
]
keywords = ["pii", "anonymization", "privacy", "ner", "gdpr", "huggingface"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "huggingface-hub>=0.24.0",
    "onnxruntime>=1.18.0",
    "tokenizers>=0.19.0",
]

[project.optional-dependencies]
transformers = [
    "torch>=2.0",
    "transformers>=4.40",
]
langfuse = [
    "langfuse>=3.0.0",
]
langchain = [
    "langchain>=1.0.0",
    "langchain-groq>=1.0.0",
    "langchain-openai>=1.0.0",
    "langfuse>=3.0.0",
    "langgraph>=1.0.0",
]
test = [
    "pytest>=8.2.0",
]

[project.urls]
Homepage = "https://github.com/bards-ai/privacy-kit"
Repository = "https://github.com/bards-ai/privacy-kit"
Issues = "https://github.com/bards-ai/privacy-kit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/privacy_kit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
