[project]
name = "privacy-kit"
version = "0.3.0"
description = "Privacy blocks for LLM apps: on-device PII detection, redaction, reversible pseudonymization, and a local gateway proxy for AI tools"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Bards.ai" },
]
keywords = ["pii", "anonymization", "privacy", "ner", "gdpr", "huggingface", "llm", "proxy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "huggingface-hub>=0.24.0",
    "onnxruntime>=1.18.0",
    "tokenizers>=0.19.0",
]

[project.scripts]
privacy-kit = "privacy_kit.cli:main"

[project.optional-dependencies]
gateway = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "sqlmodel>=0.0.21",
    "typer>=0.12",
    "tomlkit>=0.12",
    "zstandard>=0.22",
    "brotli>=1.1",
]
transformers = [
    "torch>=2.0",
    "transformers>=4.40",
]
langfuse = [
    "langfuse>=3.0.0",
]
langchain = [
    "langchain>=1.0.0",
    "langchain-groq>=1.0.0",
    "langchain-openai>=1.0.0",
    "langfuse>=3.0.0",
    "langgraph>=1.0.0",
]
test = [
    "pytest>=8.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/bards-ai/privacy-kit"
Repository = "https://github.com/bards-ai/privacy-kit"
Issues = "https://github.com/bards-ai/privacy-kit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/privacy_kit"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF", "T20"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests and runnable examples may print; in src/ the no-print rule (T20) is a
# privacy invariant — raw text being processed must never reach stdout/stderr.
"tests/*" = ["T20"]
"examples/*" = ["T20"]
# Debug/dev tooling, not shipped: the codex probe's entire job is printing
# and capturing traffic the user explicitly asked to observe.
"scripts/*" = ["T20"]
# The preview UI embeds its single-file HTML/JS page as a string: markup lines
# don't wrap at 100 chars and the UI copy legitimately uses the "×" glyph.
"src/privacy_kit/gateway/ui.py" = ["E501", "RUF001"]

[tool.ruff.lint.isort]
known-first-party = ["privacy_kit"]

[tool.ruff.lint.flake8-bugbear]
# Typer's and FastAPI's dependency-injection defaults are the idiomatic pattern,
# not B008 bugs.
extend-immutable-calls = ["typer.Option", "typer.Argument", "fastapi.Query", "fastapi.Depends"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# ML libs ship incomplete/partial stubs; treat them as untyped (Any) so strict
# mode doesn't trip on their from_pretrained() etc.
module = [
    "transformers.*",
    "torch.*",
    "onnxruntime.*",
    "tokenizers.*",
    "huggingface_hub.*",
    "langfuse.*",
    "langchain.*",
    "langgraph.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
# The Langfuse CallbackHandler base class resolves to Any (stubs skipped above);
# subclassing it is the whole point of this integration.
module = "privacy_kit.integrations.langchain"
disallow_subclassing_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
